# FPGA_project

HLS_srcs/: b2.h  nn.cpp
Maxi_hls/Maxi_hls/: _maxi.cfg  compile_commands.json  nn.h  vitis-comp.json
Maxi_hls/Maxi_hls/object_detect_nnbw/: component.xml  object_detect_nnbw.hlscompile_summary  object_detect_nnbw.hlsrun_csim_summary  object_detect_nnbw.hlsrun_package_summary
Maxi_hls/Maxi_hls/object_detect_nnbw/drivers/object_detect_nnbw_v1_0/src/: CMakeLists.txt
Training_data/Images/Images/: train.csv
Training_data/Training/: train.ipynb  train.py  w1.h  w2.h
bit_hwh/: design_1_wrapper.bit  design_1_wrapper.hwh  design_1_wrapper.tcl
my_new_folder/: b1.h  tb_nn.cpp
object_detect_nnbw_IP/hdl/verilog/: object_detect_nnbw.v  object_detect_nnbw_gmem_m_axi.v  object_detect_nnbw_object_detect_nnbw_Pipeline_VITIS_LOOP_54_3_w2_0_ROM_AUTO_1R.v  object_detect_nnbw_object_detect_nnbw_Pipeline_VITIS_LOOP_54_3_w2_21_ROM_AUTO_1R.v  object_detect_nnbw_object_detect_nnbw_Pipeline_VITIS_LOOP_54_3_w2_29_ROM_AUTO_1R.v  object_detect_nnbw_object_detect_nnbw_Pipeline_VITIS_LOOP_54_3_w2_30_ROM_AUTO_1R.v  object_detect_nnbw_sparsemux_9_2_16_1_1_x.v
object_detect_nnbw_IP/hdl/vhdl/: object_detect_nnbw_object_detect_nnbw_Pipeline_1.vhd  object_detect_nnbw_object_detect_nnbw_Pipeline_VITIS_LOOP_38_1_VITIS_LOOP_42_2_b1_ROM_AUTO_1R.vhd  object_detect_nnbw_object_detect_nnbw_Pipeline_VITIS_LOOP_54_3_w2_10_ROM_AUTO_1R.vhd  (+5 more)
project_Maxi_vivado/project_Maxi/: project_Maxi.xpr
project_Maxi_vivado/project_Maxi/bitfile/: design_1.hwh  design_1_wrapper.bit
test_files/: onboard_test.ipynb
(+438 files in other folders)
